<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/grey_medium"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/warning"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:drawablePadding="5dp"
            app:drawableTint="@color/pale_green"
            app:drawableStartCompat="@drawable/warning"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@color/light_green"
            app:layout_constraintTop_toBottomOf="@id/warning" />

        <TextView
            android:id="@+id/warning_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/warning_info"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/warning_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/pale_green"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/yes"
                    android:gravity="center"
                    android:textColor="@color/grey_dark"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/grey_light"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/no"
                    android:gravity="center"
                    android:textColor="@color/pale_green"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>